src/test/deca/context/invalid/sansObj/minus-unaire-string.deca
// Description:
//          Utilisation du moins unaire sur un string
//
// Résultat:
//Le terme à rendre négatif doit être un nombre
//
{
    println(-"string");
}